# artdaq_core_mu2e

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: track_new_issues.yml  track_new_prs.yml
artdaq-core-mu2e/: CMakeLists.txt
artdaq-core-mu2e/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
artdaq-core-mu2e/Data/: ArtFragment.cc  ArtFragment.hh  CMakeLists.txt  CRVDataDecoder.cc  CRVDataDecoder.hh  CRVFragment.cc  CRVFragment.hh  CRVGRDataDecoder.cc  CRVGRDataDecoder.hh  CaloTestDataDecoder.cc  CaloTestDataDecoder.hh  CalorimeterDataDecoder.cc  CalorimeterDataDecoder.hh  CalorimeterDataDecoderNew.cc  CalorimeterDataDecoderNew.hh  CalorimeterFragment.cc  CalorimeterFragment.hh  CalorimeterFragmentNew.cc  CalorimeterFragmentNew.hh  CalorimeterTestDataDecoder.cc  CalorimeterTestDataDecoder.hh  DTCDataDecoder.cc  DTCDataDecoder.hh  EWT.hh  EventHeader.cc  EventHeader.hh  Mu2eEventHeader.cc  README.md  RunHeader.cc  RunHeader.hh  SubRunHeader.cc  SubRunHeader.hh  TimeStamp.cc  TimeStamp.hh  TrackerDataDecoder.cc  TrackerDataDecoder.hh  TrackerFragment.cc  TrackerFragment.hh  TrkDtcFragment.hh  classes.h  (+1 more)
artdaq-core-mu2e/Overlays/: ArtFragment.cc  ArtFragment.hh  CFO_Packets.cpp  CFO_Packets.h  CMakeLists.txt  CRVFragment.cc  CalorimeterFragment.hh  DTCEventFragment.cc  DTCEventFragment.hh  DTCFragment.cc  DTC_Packets.cpp  DTC_Packets.h  DTC_Types.cpp  DTC_Types.h  FragmentType.cc  FragmentType.hh  Mu2eEventFragmentWriter.cc  Mu2eEventFragmentWriter.hh  Mu2eEventHeader.cc  Mu2e_fragmentNameHelper.cc  STMFragment.cc  STMFragment.hh  TrackerFragment.cc  TrackerFragment.hh  TrkDtcFragment.hh  classes.h  mu2eFragment.cc  mu2eFragment.hh  mu2eFragmentReader.hh  mu2eFragmentWriter.hh
artdaq-core-mu2e/Overlays/CFO_Packets/: CFO_DMAPacket.cpp  CFO_DMAPacket.h  CFO_DataPacket.cpp  CFO_DataPacket.h  CFO_Event.cpp  CFO_Event.h  CFO_EventHeader.h  CFO_EventRecord.h  CFO_PacketType.h
artdaq-core-mu2e/Overlays/DTC_Packets/: DTC_DCSReplyPacket.cpp  DTC_DCSReplyPacket.h  DTC_DCSRequestPacket.cpp  DTC_DCSRequestPacket.h  DTC_DMAPacket.cpp  DTC_DMAPacket.h  DTC_DataBlock.h  DTC_DataHeaderPacket.cpp  DTC_DataHeaderPacket.h  DTC_DataPacket.cpp  DTC_DataPacket.h  DTC_DataRequestPacket.cpp  DTC_DataRequestPacket.h  DTC_DataStatus.h  DTC_Event.cpp  DTC_Event.h  DTC_EventHeader.h  DTC_HeartbeatPacket.cpp  DTC_HeartbeatPacket.h  DTC_PacketType.h  DTC_SubEvent.cpp  DTC_SubEvent.h  DTC_SubEventHeader.h
artdaq-core-mu2e/Overlays/DTC_Types/: DTC_CharacterNotInTableError.cpp  DTC_CharacterNotInTableError.h  DTC_DCSOperationType.h  DTC_DDRFlags.h  DTC_DebugType.cpp  DTC_DebugType.h  DTC_EVBStatus.h  DTC_EventMode.h  DTC_EventWindowTag.cpp  DTC_EventWindowTag.h  DTC_FIFOFullErrorFlags.h  DTC_IICDDRBusAddress.h  DTC_IICSERDESBusAddress.h  DTC_LinkEnableMode.h  DTC_LinkStatus.h  DTC_Link_ID.cpp  DTC_Link_ID.h  DTC_OscillatorType.h  DTC_PLL_ID.h  DTC_PRBSMode.h  DTC_ROC_Emulation_Type.h  DTC_RXBufferStatus.h  DTC_RXStatus.cpp  DTC_RXStatus.h  DTC_SERDESLoopbackMode.h  DTC_SERDESRXDisparityError.cpp  DTC_SERDESRXDisparityError.h  DTC_SerdesClockSpeed.h  DTC_SimMode.cpp  DTC_SimMode.h  DTC_Subsystem.h  Exceptions.h  Utilities.cpp  Utilities.h
artdaq-core-mu2e/Overlays/root/: CMakeLists.txt  classes.h  classes_def.xml
doc/: CMakeLists.txt  Doxyfile.in  header.html.in
mu2e-artdaq-core/: CMakeLists.txt
mu2e-artdaq-core/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
mu2e-artdaq-core/Data/: CMakeLists.txt  EWT.hh  EventHeader.cc  EventHeader.hh  RunHeader.cc  SubRunHeader.cc  SubRunHeader.hh  TimeStamp.cc  classes.h  classes_def.xml
mu2e-artdaq-core/Overlays/: ArtFragment.cc  ArtFragment.hh  ArtFragmentReader.cc  ArtFragmentReader.hh  CMakeLists.txt  CRVFragment.cc  CRVFragment.hh  CalorimeterFragment.cc  CalorimeterFragment.hh  CalorimeterFragmentReader.hh  CalorimeterFragmentWriter.hh  CosmicVetoFragmentReader.hh  CosmicVetoFragmentWriter.hh  DTCFragment.cc  DTCFragment.hh  DTCFragmentWriter.hh  DataBlock.cc  DataBlock.hh  DataBlockIterator.hh  DebugFragmentReader.hh  DebugFragmentWriter.hh  DetectorFragment.cc  DetectorFragment.hh  DetectorFragmentWriter.hh  EWT.hh  EventHeader.cc  EventHeader.hh  FragmentType.cc  FragmentType.hh  Mu2eEventFragment.hh  Mu2eEventFragmentWriter.cc  Mu2eEventFragmentWriter.hh  Mu2eEventHeader.hh  Mu2e_fragmentNameHelper.cc  RunHeader.cc  RunHeader.hh  SubRunHeader.cc  SubRunHeader.hh  TimeStamp.cc  TimeStamp.hh  (+13 more)
ups/: CMakeLists.txt  product_deps  setup_deps  setup_for_development
